--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             <div class="chat-container">
                 <div class="chat-history" id="chat-history">
                     <div class="message ai-message">
-                        Olá! Eu sou o AllOneAI. Escolha um modelo no menu à direita e comece a conversar!
+                        Olá! Eu sou o AllOneAI Pro. Escolha um modelo no menu à direita e comece a conversar!
                     </div>
                 </div>
                 
