--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                     <input type="text" id="user-input" placeholder="Digite sua mensagem..." autocomplete="off">
                     <button id="send-button">Enviar</button>
                     <div class="command-hint">
-                        Use <span>/imagem [descrição]</span> para gerar imagens, <span>/falar [texto]</span> para áudio.
+                    <span>Use O Chat :D</span>
                     </div>
                 </div>
             </div>
